# zerooverhead

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/suites/custom/: README.md  bench_alloc.c
cmake/: zerooverhead.cmake
docs/architecture/: critical-blocks.md
examples/c/: basic.c
fuzz/: README.md
include/zerooverhead/: zerooverhead.h  zh_config.h  zh_stats.h  zh_types.h
src/c/: zerooverhead.c  zh_internal.h
src/c/alloc/: zh_alloc.c  zh_alloc.h  zh_buddy.h  zh_slab.h
src/c/alloc/buddy/: zh_buddy.c
src/c/alloc/huge/: zh_huge.c
src/c/alloc/segregated/: zh_segregated.c
src/c/core/: zh_core.c  zh_init.c  zh_shutdown.c
src/c/platform/: zh_platform.c  zh_platform.h
src/c/telemetry/: zh_telemetry.c
src/c/threads/: zh_spinlock.c  zh_spinlock.h  zh_tls.c
src/c/utils/: zh_align.c  zh_align.h  zh_bits.c  zh_hash.c  zh_math.c
src/python/zerooverhead/: __init__.py
src/rust/zerooverhead/: Cargo.toml
tests/: README.md
tests/latency/: test_perf_gate.c
tests/threaded/: test_cross_thread.cpp
tests/unit/: test_smoke.c
tools/ci/: README.md
tools/scripts/: bootstrap.ps1
